[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-rewind-backend"
version = "0.1.0"
description = "Music Rewind backend API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Music Rewind" }]
license = { text = "Proprietary" }

dependencies = [
  "fastapi>=0.110,<1.0",
  "pydantic>=2.6,<3.0",
  "uvicorn[standard]>=0.27,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "python-dotenv>=1.0,<2.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.8",
  "ruff>=0.4",
  "types-python-dateutil",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]